examples/canary/canary-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo
spec:
  replicas: 5
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: canary-demo
  template:
    metadata:
      labels:
        app: canary-demo
    spec:
      containers:
      - name: canary-demo
        image: arthurma/demo:v1.0.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        resources:
          requests:
            memory: 64Mi
            cpu: 32m
  strategy:
    canary:
      canaryService: canary-demo-preview
      stableService: canary-demo
      trafficRouting:
        nginx:
          stableIngress: canary-demo  # required
          additionalIngressAnnotations:   # optional
            canary-by-header: X-Canary
            canary-by-header-value: "2330"
      steps:
      - setCanaryScale:
          weight: 20
      - pause: {}
      # - setWeight: 20
      # - pause: {}
      # - setWeight: 40
      # - pause: {}
      # - setWeight: 60
      # - pause: {duration: 10}
      # - setWeight: 80
      # - pause: {duration: 10}
