examples/canary/canary-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: canary-demo
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    #kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: my-demo.local
    http:
      paths:
      - path: /
        backend:
          serviceName: canary-demo
          servicePort: 80
